--- a/wp-content/themes/maine-learning-sites/style.css
+++ b/wp-content/themes/maine-learning-sites/style.css
@@ -104,9 +104,7 @@ textarea
 	text-decoration: none;
 }
 
-h2, h2 a, h2 a:visited {
-margin: 20px 0 10px 0;
-}
+h2, h2 a, h2 a:visited { margin: 20px 0 10px 0; }
 
 input
 {
@@ -685,7 +683,7 @@ li li a .sf-sub-indicator
 {
 	background-color: #eee;
 	/* ML */
-	background-image: url(images/mln-banner-sites-default-green.jpg); 
+	background-image: url(images/mln-banner-sites-default-green.jpg);
 	/* ML */
 	margin: 0 auto 0;
 	/* ML */
@@ -704,13 +702,11 @@ li li a .sf-sub-indicator
 
 .breadcrumb
 {
-
-	display: none; 
+	display: none;
 	background: transparent;
 	border: none;
 	border-radius: none;
-	
-/* ML Unused
+	/* ML Unused
 	color: #777;
 	font-size: 11px;
 	line-height: 18px;
@@ -773,8 +769,8 @@ li li a .sf-sub-indicator
 }
 
 .standard-form textarea { margin-left: 0 !important; }
-	/* ML */
 
+/* ML */
 blockquote
 {
 	margin: 5px 15px 20px;
@@ -785,9 +781,12 @@ blockquote
 .entry-content { overflow: hidden; }
 .entry-content p { padding: 0 0 15px; }
 
-div.entry-content div {
-  padding-top: 10px; /* ML */
+div.entry-content div
+{
+	padding-top: 10px;
+	/* ML */
 }
+
 p.subscribe-to-comments { padding: 20px 0 10px; }
 .clear { clear: both; }
 
@@ -914,7 +913,8 @@ h2 a:visited
 	/* ML */
 	line-height: 22px;
 	/* ML */
-	margin: 20px 0 10px 0; /* ML */
+	margin: 20px 0 10px 0;
+	/* ML */
 	text-transform: none;
 	/* ML */
 }
@@ -1011,11 +1011,10 @@ h6 { font-size: 12px; }
 /* Post Meta
 ------------------------------------------------------------ */
 
-
 .post-meta
 {
 	margin-top: 10px;
-/*
+	/*
 	border-top: 1px solid #ddd;
 	clear: both;
 	font-size: 12px;
@@ -1023,8 +1022,6 @@ h6 { font-size: 12px; }
 	text-transform: uppercase;
 	*/
 }
-
-
 
 /* Author Box
 ------------------------------------------------------------ */
@@ -1210,9 +1207,12 @@ p.wp-caption-text
 	line-height: 20px;
 }
 
-div.sidebar li {
-  padding-bottom: 10px; 	/* ML */
-  margin-bottom: 10px; 	/* ML */
+div.sidebar li
+{
+	padding-bottom: 10px;
+	/* ML */
+	margin-bottom: 10px;
+	/* ML */
 }
 
 #sidebar-alt
@@ -1243,8 +1243,10 @@ div.sidebar li {
 	padding: 0 0 15px;
 }
 
-div.widget-wrap li {
-  margin-top: 4px; 	/* ML */
+div.widget-wrap li
+{
+	margin-top: 4px;
+	/* ML */
 }
 
 .widget-area .textwidget { padding: 5px 15px 0; }
@@ -1653,8 +1655,8 @@ input:hover[type="submit"]
 ------------------------------------------------------------ */
 
 .gform_wrapper { margin: 0; }
-	/* MLN */
 
+/* MLN */
 div.gform_wrapper input,
 div.gform_wrapper select,
 div.gform_wrapper textarea
@@ -1667,8 +1669,8 @@ div.gform_wrapper textarea
 }
 
 div.entry-content div.ginput_container { padding-top: 0; }
-	/* MLN */
-	
+
+/* MLN */
 div.gform_footer input.button { color: #fff; }
 
 div.gform_wrapper .ginput_complex label
@@ -1697,7 +1699,8 @@ div.gform_wrapper .gform_footer
 }
 
 .gform_wrapper .chzn-container .chzn-results li { line-height: 80%; }
-	/* MLN */
+
+/* MLN */
 
 /* Custom for MLN
 ------------------------------------------------------------ */
@@ -1750,7 +1753,8 @@ body.home-page .entry-title { display: none; }
 	text-shadow: black 0.1em 0.1em 0.2em;
 }
 
-#wp-admin-bar ul li#bp-adminbar-notifications-menu a span {
+#wp-admin-bar ul li#bp-adminbar-notifications-menu a span
+{
 	background: #aaa;
 	color: #222;
 	text-shadow: none;
@@ -1799,8 +1803,8 @@ body.home-page .entry-title { display: none; }
 }
 
 /* ENTRY: CONTENT: IMAGES */
-
-#content img {
+#content img
+{
 	background: none repeat scroll 0 0 #FFFFFF;
 	border-radius: 4px 4px 4px 4px;
 	-moz-box-shadow: 2px 2px 8px #888;
@@ -1868,7 +1872,9 @@ img.float-left-flex
 #subscription-manager b { display: none; }
 
 /* Home Featured Widget */
-div.home-featured .textwidget { 
-	font-size: 18px; 
+div.home-featured .textwidget
+{
+	font-size: 18px;
 	line-height: 28px;
-	padding: 6px 0 45px 0 !important; }
+	padding: 6px 0 45px 0 !important;
+}
