--- a/wp-content/themes/maine-learning-home/style.css
+++ b/wp-content/themes/maine-learning-home/style.css
@@ -630,27 +630,29 @@ BP PANELS: ACTIVITIES
 
 #item-body form#whats-new-form {
 	background: url(http://mainelearning.net/wp-content/uploads/2012/05/Activity-header-quickpost-2012-05-14a.png) top left no-repeat;
-	margin: 0 0 10px;
+	  display: block !important;
+	margin: 0 0 10px 10px;
 	padding: 40px 0 20px 0;
 }
 
-#item-body form#whats-new-form {
-  display: block !important;
+form#whats-new-form h5 {
+	margin-left: 66px;
 }
 
-#item-body form#whats-new-form h5 {
-  display: none;
+form#whats-new-form #whats-new-content {
+margin-left: 44px;
 }
 
+form#whats-new-form #whats-new-avatar {
+margin-top: 4px;
+}
 
 div.activity { background: #efefef; }
 div.activity-avatar { margin: 6px 0 0 16px; }
 div.activity-comments div.acomment-content { font-size: 12px; }
 div.activity-comments > ul { background: transparent; }
 
-form#whats-new-form #whats-new-content {
-margin-left: 44px;
-}
+
 
 /* ----------------------
 BP PANELS: GROUP DIRECTORY
