Formatted style.css

--- a/wp-content/themes/maine-learning-home/style.css
+++ b/wp-content/themes/maine-learning-home/style.css
@@ -143,9 +143,7 @@ body#bp-default #wp-admin-bar .padder
 	text-shadow: none;
 }
 
-html body.wp-admin {
-    padding-top: 0px !important;
-}
+html body.wp-admin { padding-top: 0px !important; }
 
 /* ----------------------
 HEADER
@@ -215,7 +213,7 @@ ul#nav { max-width: 70%; }
 	font-size: 15px;
 	font-weight: bold;
 	padding: 5px 10px;
-	text-shadow: black 1px 1px 1px; 
+	text-shadow: black 1px 1px 1px;
 	text-transform: uppercase;
 	letter-spacing: .5px;
 }
@@ -232,12 +230,13 @@ ul#nav { max-width: 70%; }
 	color: #ddd;
 }
 
-#nav .sfhover ul li a, #nav :hover ul li a {
-  padding: 0 0;
-  background-color: #444;
-  color: #ccc;
-  font-size: 12px;
-  text-transform: none;
+#nav .sfhover ul li a, #nav :hover ul li a
+{
+	padding: 0 0;
+	background-color: #444;
+	color: #ccc;
+	font-size: 12px;
+	text-transform: none;
 }
 
 div#content .padder { border-right: 0px solid #fff; }
@@ -421,11 +420,8 @@ div#item-header span.activity, div#item-header h2 span.highlight
 }
 
 .dir-form h3 { font-size: 18px; }
-
 .activity-list .activity-content .activity-header, .activity-list .activity-content .comment-header { font-size: 12px; }
-
 ul#activity-stream li.activity_update { padding-top: 20px; }
-
 li.new_forum_post div.activity-meta, li.exb div.activity-meta, li.added_group_document div.activity-meta { display: none; }
 
 .activity-list li.new_forum_post .activity-content .activity-inner, .activity-list li.new_forum_topic .activity-content .activity-inner
@@ -444,11 +440,9 @@ li.new_forum_post div.activity-meta, li.exb div.activity-meta, li.added_group_do
 	padding: 18px 10px 4px 20px;
 }
 
-
 li.exb div.activity-meta { display: block !important; }
 
 /*li.exb .acomment-reply, li.new_forum_topic .acomment-reply, li.new_forum_post .acomment-reply, li.new_forum_post .fav,  li.new_forum_topic .fav, .exb .fav { display: none; }*/
-
 li.exb blockquote p a
 {
 	font-family: "myriad-pro-1","myriad-pro-2",'Helvetica Neue',Helvetica,'Lucida Grande','Lucida Sans Unicode',sans-serif;
@@ -477,10 +471,7 @@ a.view-post
 	padding: 0 10px 8px 0;
 }
 
-#posts-filter {
-  margin: 0px 0px 0px 20px;
-  
-}
+#posts-filter { margin: 0px 0px 0px 20px; }
 
 .view-group-discussion-topic
 {
@@ -517,36 +508,22 @@ div.activity-meta { clear: right; }
 	text-decoration: none;
 }
 
-#item-body form#whats-new-form {
+#item-body form#whats-new-form
+{
 	background: url(http://mainelearning.net/wp-content/uploads/2012/05/Activity-header-quickpost-2012-05-14a.png) 20px 0 no-repeat;
 	border-bottom: 2px solid #ddd !important;
 	margin: 6px 0 5px 0;
 	padding: 40px 10px 30px 20px;
 }
 
-form#whats-new-form textarea {
-	width: 96%;
-}
-
-form#whats-new-form h5 {
-	margin-left: 66px;
-}
-
-form#whats-new-form #whats-new-content {
-margin-left: 44px;
-}
-
-form#whats-new-form #whats-new-avatar {
-margin-top: 4px;
-}
-
-
+form#whats-new-form textarea { width: 96%; }
+form#whats-new-form h5 { margin-left: 66px; }
+form#whats-new-form #whats-new-content { margin-left: 44px; }
+form#whats-new-form #whats-new-avatar { margin-top: 4px; }
 div.activity { background: #efefef; }
 div.activity-avatar { margin: 6px 0 0 16px; }
 div.activity-comments div.acomment-content { font-size: 12px; }
 div.activity-comments > ul { background: transparent; }
-
-
 
 /* ----------------------
 BUDDYPRESS PANELS: ITEMS
@@ -563,7 +540,6 @@ BUDDYPRESS PANELS: ITEMS
 }
 
 .single-item.groups #nav li#menu-item-587 a, .forums li#menu-item-594 a, .settings li#menu-item-594 a, .events li#menu-item-594 a, .my-friends li#menu-item-594 a, .my-profile li#menu-item-594 a, .my-activity li#menu-item-594 a, .my-groups li#menu-item-594 a, .my-blogs li#menu-item-594 a { color: #ddd; }
-
 #item-body h4 { padding: 4px 0 0 12px; }
 div.pagination { margin: 0; }
 span.activity, div#message p { background: -moz-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)) repeat scroll 0 0 #fff0bf; }
@@ -652,7 +628,6 @@ BP PANELS: PROFILE
 table.profile-fields { margin-left: 20px; }
 .profile p { margin: 0 0 10px 12px; }
 
-
 /* ----------------------
 BP PANELS: GROUP DIRECTORY
 ----------------------- */
@@ -713,13 +688,9 @@ div#topic-meta
 }
 
 div#topic-meta h3 { width: 60%; }
-
 form#forum-topic-form { margin: 0; }
-
 .ass-topic-subscribe { margin-top: 4px !important; }
-
 #ass-email-subscriptions-options-page { padding: 12px 20px 20px 20px; }
-
 div.generic-button.ass-topic-subscribe a { border: 0px solid #fff; }
 
 p:last-child
@@ -736,89 +707,59 @@ BP PANELS: ALERT BOXES
 
 div#message.updated p { background-color: #ffdfb1; }
 
-
 /* ----------------------
 BP PANELS: EVENTS MANAGER
 ----------------------- */
 
-#event-form h4 {
-  font-size: 14px;
+#event-form h4 { font-size: 14px; }
+
+.em-warning-confirms
+{
+	background-color: #e5e0b8;
+	border: 1px solid #A8D144;
+	margin: 2px 30px 2px 20px;
 }
 
-.em-warning-confirms {
-background-color: #e5e0b8;
-border: 1px solid #A8D144;
-  margin: 2px 30px 2px 20px;
+#respond { margin-top: 40px; }
+#event-form { margin-left: 20px; }
+.my-events h3 { margin: 10px 0 0 20px; }
+
+#event-form h4
+{
+	margin-top: 10px;
+	padding: 4px 0 0 0;
 }
 
-#respond {
-  margin-top: 40px;
+.event .postmetadata { display: none; }
+.event .entry { padding-bottom: 20px; }
+.em-calendar tbody td { vertical-align: top; }
+
+td.eventful ul li a, td.eventful a
+{
+	color: #1FB3DD !important;
+	font-size: 12px;
+	font-style: normal;
 }
 
-#event-form {
-  margin-left: 20px;
+table thead tr { background: #ddd; }
+
+td.month_name
+{
+	background: #ddd;
+	text-align: center !important;
+	text-size: 18px;
 }
 
-.my-events h3 {
-    margin: 10px 0 0 20px;
+tr.days-names td
+{
+	background: #ddd;
+	height: .7em;
 }
 
-#event-form h4 {
-  margin-top: 10px;
-  padding: 4px 0 0 0;
-}
-
-.event .postmetadata {
-  display: none;
-}
-
-.event .entry {
-  padding-bottom: 20px;
-}
-  
-.em-calendar tbody td {
-  vertical-align: top;
-}
-
-td.eventful ul li a, td.eventful a {
-    color: #1FB3DD !important;
-    font-size: 12px;
-  font-style: normal;
-}
-
-table thead tr {
-background: #ddd;
-}
-
-td.month_name {
-  background: #ddd;
-  text-align: center !important;
-  text-size: 18px;
-}
-
-tr.days-names td {
-    background: #ddd;
-  height: .7em;
-}
-
-.em-calendar-wrapper {
-  border-top: 3px solid #bbb !important;
-}
-
-
-div.post table, div.page table  {
-border: 0px solid #EEE;
-}
-
-table.fullcalendar td {
-height: 46px;
-}
-
-div.post table thead td, div.page table thead td {
-border-top: 0px solid #EEE;
-}
-
-
+.em-calendar-wrapper { border-top: 3px solid #bbb !important; }
+div.post table, div.page table { border: 0px solid #EEE; }
+table.fullcalendar td { height: 46px; }
+div.post table thead td, div.page table thead td { border-top: 0px solid #EEE; }
 
 /* ----------------------
 BP PANELS: BP-MODERATION
