--- a/wp-content/themes/maine-learning-sites/style.css
+++ b/wp-content/themes/maine-learning-sites/style.css
@@ -153,7 +153,7 @@ ol li { list-style-type: decimal; }
 a,
 a:visited
 {
-	color: #1FB3DD;
+	color: #14748F;
 	font-weight: bold;
 	text-decoration: none;
 }
@@ -1876,3 +1876,15 @@ div.home-featured .textwidget
 	line-height: 28px;
 	padding: 6px 0 45px 0 !important;
 }
+
+/* Archive pages */
+body.archive .taxonomy-description
+{
+	background: transparent;
+	border: 0px solid #DDD;
+	margin: 0;
+	padding: 0;
+}
+
+body.archive .taxonomy-description h1 { font-size: 20px; }
+body.archive h2.entry-title a, body.archive h2.entry-title a:visited { color: #14748F; }
